--- a/manifest.json
+++ b/manifest.json
@@ -22,5 +22,9 @@
   "action": {
     "default_popup": "./popup.html"
   },
+  "web_accessible_resources": [{
+    "resources": ["donwload.js"],
+    "matches": ["<all_urls>"]
+  }],
   "manifest_version": 3
 }
