chore: moving files and add links

--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
   "name": "Instagram video downloader",
   "version": "1.0",
-  "description": "Extensão chrome para baixar videos do instagram",
+  "description": "Extensão para baixar videos do instagram",
   "icons": {
-    "128": "./assets/img/icon-128.png"
+    "128": "./assets/img/icon.png"
   },
   "background": {
-    "service_worker": "./sw.js",
+    "service_worker": "./src/sw.js",
     "type": "module"
   },
-  "homepage_url": "https://path/to/homepage",
+  "homepage_url": "https://github.com/lucasfernandodev/instagram-downloader",
   "host_permissions": ["*://*.instagram.com/*"],
   "permissions": ["storage",
   "contextMenus",
@@ -23,7 +23,7 @@
     "default_popup": "./popup.html"
   },
   "web_accessible_resources": [{
-    "resources": ["donwload.js"],
+    "resources": ["src/downloadFile.js"],
     "matches": ["<all_urls>"]
   }],
   "manifest_version": 3
